--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,3 +1,15 @@
 body {
   font-size: 14px;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f5f5f5;
+}
+
+.wrap-v1 {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.sprite_01 {
+  background: url(../img/sprite_01.png) no-repeat 0 9999px;
 }
