feat(recommend): 构建banner

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -10,6 +10,11 @@ body {
   margin: 0 auto;
 }
 
+.wrap-v2 {
+  width: 982px;
+  margin: 0 auto;
+}
+
 .sprite_01 {
   background: url(../img/sprite_01.png) no-repeat 0 9999px;
 }
