--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -28,3 +28,16 @@ a {
   color: #333;
   text-decoration: none;
 }
+
+img {
+  vertical-align: middle;
+}
+
+button {
+  border: none;
+}
+
+ul,
+li {
+  list-style: none;
+}
