feat(recommend): 构建recommend页面完成

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -18,3 +18,23 @@ body {
 .sprite_01 {
   background: url(../img/sprite_01.png) no-repeat 0 9999px;
 }
+
+.sprite_02 {
+  background: url(../img//sprite_02.png) no-repeat 0 9999px;
+}
+
+.cover-all {
+  background: url(../img/coverall.png) no-repeat 0 9999px;
+}
+
+.icon-all {
+  background: url(../img/iconall.png) no-repeat 0 9999px;
+}
+
+.icon-all_02 {
+  background: url(../img//icon_all_02.png) no-repeat 0 9999px;
+}
+
+.but-all_02 {
+  background: url(../img/button2.png) no-repeat 0 9999px;
+}
