feat(player): 构建音乐播放页面

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -15,6 +15,11 @@ body {
   margin: 0 auto;
 }
 
+.wrap-v3 {
+  width: 980px;
+  margin: 0 auto;
+}
+
 .sprite_01 {
   background: url(../img/sprite_01.png) no-repeat 0 9999px;
 }
@@ -37,4 +42,12 @@ body {
 
 .but-all_02 {
   background: url(../img/button2.png) no-repeat 0 9999px;
+}
+
+.player-bar {
+  background: url(../img/playbar.png) no-repeat 0 9999px;
+}
+
+.player-bar-icn {
+  background: url(../img/icn) no-repeat 0 0;
 }
